--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "promised-mongo": "^1.2.0",
     "superagent": "^1.8.1",
-    "underscore": "*"
+    "underscore": "*",
+    "asyncawait": "^1.0.3"
   },
   "devDependencies": {}
 }
